# mit-game-2025_1

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  internal.cpp  internal.hpp  main.cpp  maker.sh  user.cpp  user.hpp
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  main.yml
Assets/: game.lvl
